--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <style>
     body {
       background-color: #f0f0f0;
-      font-size: 16px;
       margin: 0;
       padding: 20px;
+      font-size: 16px;
       color: #333;
     }
     canvas {
@@ -36,6 +36,7 @@
   <p id="subtitle">밥먹자! 안지민</p>
   <p id="score">현재점수: 0</p>
   <main><canvas id="canvas"></canvas></main>
+
   <script>
     const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
     const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
@@ -87,29 +88,25 @@
       canvas.height = CANVAS_HEIGHT;
 
       let gameStarted = false, gameOver = false;
-      let score = 0, timer = 0, jump = false;
+      let score = 0, timer = 0;
+      let jump = false, jumping = false;
       let bgIndex = 0, villainY = CANVAS_HEIGHT, targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
       let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
       let villainReady = false;
 
       const scoreText = document.getElementById('score');
 
-      const loadImage = (src) => {
-        const img = new Image();
-        img.src = src;
-        return img;
-      };
+      const runnerSit = new Image(); runnerSit.src = ASSETS.images.runnerSit;
+      const runnerFly = new Image(); runnerFly.src = ASSETS.images.runnerFly;
+      const runnerCrash = new Image(); runnerCrash.src = ASSETS.images.runnerCrash;
+      const bgImages = ASSETS.images.backgrounds.map(src => { const i = new Image(); i.src = src; return i; });
+      const villainImages = ASSETS.images.villains.map(src => { const i = new Image(); i.src = src; return i; });
+      const obstacleImages = ASSETS.images.obstacles.map(src => { const i = new Image(); i.src = src; return i; });
 
-      const runnerSit = loadImage(ASSETS.images.runnerSit);
-      const runnerFly = loadImage(ASSETS.images.runnerFly);
-      const runnerCrash = loadImage(ASSETS.images.runnerCrash);
-      const bgImages = ASSETS.images.backgrounds.map(loadImage);
-      const villainImages = ASSETS.images.villains.map(loadImage);
-      const obstacleImages = ASSETS.images.obstacles.map(loadImage);
-      const titleImage = loadImage(ASSETS.images.title);
-      const startButtonImage = loadImage(ASSETS.images.startBtn);
-      const gameOverImage = loadImage(ASSETS.images.gameOver);
-      const restartImage = loadImage(ASSETS.images.restart);
+      const startBackground = new Image(); startBackground.src = ASSETS.images.title;
+      const startButton = new Image(); startButton.src = ASSETS.images.startBtn;
+      const gameOverImage = new Image(); gameOverImage.src = ASSETS.images.gameOver;
+      const restartImage = new Image(); restartImage.src = ASSETS.images.restart;
 
       const runner = {
         x: RUNNER_START_X,
@@ -117,7 +114,7 @@
         width: RUNNER_WIDTH,
         height: RUNNER_HEIGHT,
         draw() {
-          const img = gameOver ? runnerCrash : (jump ? runnerFly : runnerSit);
+          const img = gameOver ? runnerCrash : (jumping ? runnerFly : runnerSit);
           ctx.drawImage(img, this.x, this.y, this.width, this.height);
         }
       };
@@ -144,7 +141,8 @@
       }
 
       function drawVillain() {
-        ctx.drawImage(villainImages[bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
+        const img = villainImages[bgIndex];
+        ctx.drawImage(img, CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
       }
 
       function isCollision(a, b) {
@@ -160,7 +158,7 @@
 
         if (!villainReady && villainY > targetVillainY) {
           villainY -= 5;
-        } else if (!villainReady && villainY <= targetVillainY) {
+        } else if (!villainReady) {
           villainY = targetVillainY;
           villainReady = true;
         }
@@ -186,7 +184,6 @@
             obstacles.splice(idx, 1);
             score += SCORE_PER_OBSTACLE;
             scoreText.textContent = '현재점수: ' + score;
-
             if (score % 200 === 0) {
               villainReady = false;
               let exitInterval = setInterval(() => {
@@ -197,7 +194,6 @@
                   obstacleSpeed += 1;
                   obstacleFrequency = Math.max(15, obstacleFrequency - 10);
                   villainY = CANVAS_HEIGHT;
-                  targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
                 }
               }, 30);
             }
@@ -205,9 +201,15 @@
         });
 
         runner.draw();
-        runner.y += jump ? -JUMP_SPEED : JUMP_SPEED;
-        if (runner.y < MAX_JUMP_HEIGHT) jump = false;
-        if (runner.y > RUNNER_START_Y) runner.y = RUNNER_START_Y;
+        if (jump && runner.y > MAX_JUMP_HEIGHT) {
+          runner.y -= JUMP_SPEED;
+          jumping = true;
+        } else if (!jump && runner.y < RUNNER_START_Y) {
+          runner.y += JUMP_SPEED;
+          jumping = true;
+        } else {
+          jumping = false;
+        }
 
         timer++;
       }
@@ -215,7 +217,6 @@
       document.addEventListener('keydown', e => {
         if (e.code === 'Space') jump = true;
       });
-
       document.addEventListener('keyup', e => {
         if (e.code === 'Space') jump = false;
       });
@@ -225,33 +226,23 @@
         const x = e.clientX - rect.left;
         const y = e.clientY - rect.top;
 
-        if (!gameStarted) {
-          if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
-              y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
-            gameStarted = true;
-            animate();
-          }
-        } else if (gameOver) {
-          if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
-              y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
-            location.reload();
-          }
+        if (!gameStarted &&
+            x >= (CANVAS_WIDTH - 200) / 2 &&
+            x <= (CANVAS_WIDTH + 200) / 2 &&
+            y >= (CANVAS_HEIGHT + 100) / 2 &&
+            y <= (CANVAS_HEIGHT + 200) / 2) {
+          gameStarted = true;
+          animate();
         }
       });
 
-      titleImage.onload = () => {
-        ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        startButtonImage.onload = () => {
-          ctx.drawImage(startButtonImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+      // 시작화면 출력
+      startBackground.onload = () => {
+        ctx.drawImage(startBackground, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+        startButton.onload = () => {
+          ctx.drawImage(startButton, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
         };
       };
-
-      setInterval(() => {
-        if (gameOver) {
-          ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-          ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-        }
-      }, 100);
     };
   </script>
 </body>
