--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>밥먹자! 안지민</title>
   <style>
     body {
@@ -36,100 +36,212 @@
   <p id="subtitle">밥먹자! 안지민</p>
   <p id="score">현재점수: 0</p>
   <main><canvas id="canvas"></canvas></main>
-  <script>
-    const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
-    const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
-    const RUNNER_START_X = 10, RUNNER_START_Y = 400;
-    const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
 
-    const ASSETS = {
-      title: './background/title.png',
-      startBtn: './background/gamestart.png',
-      runnerSit: './character/jimin-sit.png',
-      runnerFly: './character/jimin-fly.png',
-      runnerCrash: './character/jimin-crash.png'
+<script>
+const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
+const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
+const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
+const RUNNER_START_X = 10, RUNNER_START_Y = 400;
+const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
+const BASE_OBSTACLE_SPEED = 4, BASE_OBSTACLE_FREQUENCY = 90;
+const SCORE_PER_OBSTACLE = 10;
+
+const ASSETS = {
+  background: [
+    './background/samin-background.png',
+    './background/sohyun-background.png',
+    './background/doyun-background.png',
+    './background/yeonki-background.png',
+    './background/sangwoo-background.png',
+    './background/boss-background.png'
+  ],
+  villains: [
+    './character/samin-basic.png',
+    './character/sohyun-basic.png',
+    './character/doyun-basic.png',
+    './character/yeonki-basic.png',
+    './character/sangwoo-basic.png',
+    './character/boss-basic.png'
+  ],
+  obstacles: [
+    './character/samin-obstacle.png',
+    './character/sohyun-obstacle.png',
+    './character/doyun-obstacle.png',
+    './character/yeonki-obstacle.png',
+    './character/sangwoo-obstacle.png'
+  ],
+  title: './background/title.png',
+  startBtn: './background/gamestart.png',
+  gameOver: './background/gameover.png',
+  restart: './background/restart.png',
+  runnerSit: './character/jimin-sit.png',
+  runnerFly: './character/jimin-fly.png',
+  runnerCrash: './character/jimin-crash.png'
+};
+
+window.onload = () => {
+  const canvas = document.getElementById('canvas');
+  const ctx = canvas.getContext('2d');
+  canvas.width = CANVAS_WIDTH;
+  canvas.height = CANVAS_HEIGHT;
+
+  let gameStarted = false, gameOver = false, jump = false;
+  let score = 0, timer = 0;
+  let runnerY = RUNNER_START_Y;
+  let bgIndex = 0, villainY = CANVAS_HEIGHT, villainTargetY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+  let villainReady = false;
+  let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
+
+  const scoreText = document.getElementById('score');
+
+  // 이미지 준비
+  const titleImage = new Image(); titleImage.src = ASSETS.title;
+  const startBtnImage = new Image(); startBtnImage.src = ASSETS.startBtn;
+  const gameOverImage = new Image(); gameOverImage.src = ASSETS.gameOver;
+  const restartImage = new Image(); restartImage.src = ASSETS.restart;
+  const runnerSit = new Image(); runnerSit.src = ASSETS.runnerSit;
+  const runnerFly = new Image(); runnerFly.src = ASSETS.runnerFly;
+  const runnerCrash = new Image(); runnerCrash.src = ASSETS.runnerCrash;
+
+  const bgImages = ASSETS.background.map(src => { const img = new Image(); img.src = src; return img; });
+  const villainImages = ASSETS.villains.map(src => { const img = new Image(); img.src = src; return img; });
+  const obstacleImages = ASSETS.obstacles.map(src => { const img = new Image(); img.src = src; return img; });
+
+  class Obstacle {
+    constructor(image) {
+      this.x = CANVAS_WIDTH;
+      this.y = Math.random() * (CANVAS_HEIGHT - 80) + 30;
+      this.width = 50;
+      this.height = 50;
+      this.image = image;
+      this.frame = 0;
+    }
+    draw(wave = false) {
+      if (wave) this.y += Math.sin(this.frame++ / 5) * 2;
+      ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
+    }
+  }
+
+  const obstacles = [];
+
+  function drawBackground() {
+    ctx.drawImage(bgImages[bgIndex], 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+  }
+
+  function drawVillain() {
+    ctx.drawImage(villainImages[bgIndex], CANVAS_WIDTH - VILLAIN_WIDTH, villainY, VILLAIN_WIDTH, VILLAIN_HEIGHT);
+  }
+
+  function isCollision(a, b) {
+    return !(a.x > b.x + b.width || a.x + a.width < b.x || a.y > b.y + b.height || a.y + a.height < b.y);
+  }
+
+  function animate() {
+    if (gameOver) return;
+    requestAnimationFrame(animate);
+    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+
+    drawBackground();
+
+    if (!villainReady && villainY > villainTargetY) {
+      villainY -= 5;
+    } else if (!villainReady && villainY <= villainTargetY) {
+      villainY = villainTargetY;
+      villainReady = true;
+    }
+    drawVillain();
+
+    if (villainReady && timer % obstacleFrequency === 0) {
+      if (bgIndex < 5) {
+        obstacles.push(new Obstacle(obstacleImages[bgIndex]));
+      } else {
+        for (let i = 0; i < 2; i++) {
+          const img = obstacleImages[Math.floor(Math.random() * obstacleImages.length)];
+          obstacles.push(new Obstacle(img));
+        }
+      }
+    }
+
+    obstacles.forEach((obs, idx) => {
+      obs.x -= obstacleSpeed;
+      obs.draw(bgIndex === 5);
+      if (isCollision({x: RUNNER_START_X, y: runnerY, width: RUNNER_WIDTH, height: RUNNER_HEIGHT}, obs)) {
+        gameOver = true;
+      }
+      if (obs.x < -obs.width) {
+        obstacles.splice(idx, 1);
+        score += SCORE_PER_OBSTACLE;
+        scoreText.textContent = '현재점수: ' + score;
+
+        if (score % 200 === 0) {
+          villainReady = false;
+          let exit = setInterval(() => {
+            villainY += 5;
+            if (villainY > CANVAS_HEIGHT) {
+              clearInterval(exit);
+              bgIndex = Math.min(5, Math.floor(score / 200));
+              obstacleSpeed += 1;
+              obstacleFrequency = Math.max(20, obstacleFrequency - 10);
+              villainY = CANVAS_HEIGHT;
+            }
+          }, 30);
+        }
+      }
+    });
+
+    if (jump && runnerY > MAX_JUMP_HEIGHT) runnerY -= JUMP_SPEED;
+    else if (!jump && runnerY < RUNNER_START_Y) runnerY += JUMP_SPEED;
+
+    const runnerImage = (jump || runnerY < RUNNER_START_Y) ? runnerFly : runnerSit;
+    ctx.drawImage(runnerImage, RUNNER_START_X, runnerY, RUNNER_WIDTH, RUNNER_HEIGHT);
+
+    timer++;
+  }
+
+  function drawStartScreen() {
+    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(startBtnImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+  }
+
+  function drawGameOverScreen() {
+    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
+    ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
+  }
+
+  canvas.addEventListener('click', e => {
+    const rect = canvas.getBoundingClientRect();
+    const x = e.clientX - rect.left, y = e.clientY - rect.top;
+
+    if (!gameStarted) {
+      if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
+          y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+        gameStarted = true;
+        animate();
+      }
+    } else if (gameOver) {
+      if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
+          y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
+        location.reload();
+      }
+    }
+  });
+
+  document.addEventListener('keydown', e => {
+    if (e.code === 'Space') jump = true;
+  });
+  document.addEventListener('keyup', e => {
+    if (e.code === 'Space') jump = false;
+  });
+
+  // 시작화면 로딩 완료 시 표시
+  titleImage.onload = () => {
+    startBtnImage.onload = () => {
+      drawStartScreen();
     };
-
-    window.onload = () => {
-      const canvas = document.getElementById('canvas');
-      const ctx = canvas.getContext('2d');
-      canvas.width = CANVAS_WIDTH;
-      canvas.height = CANVAS_HEIGHT;
-
-      let gameStarted = false;
-      let jump = false;
-      let runnerY = RUNNER_START_Y;
-
-      const scoreText = document.getElementById('score');
-      scoreText.textContent = '현재점수: 0';
-
-      const titleImage = new Image();
-      const startBtnImage = new Image();
-      const runnerSit = new Image();
-      const runnerFly = new Image();
-
-      titleImage.src = ASSETS.title;
-      startBtnImage.src = ASSETS.startBtn;
-      runnerSit.src = ASSETS.runnerSit;
-      runnerFly.src = ASSETS.runnerFly;
-
-      // 시작 이미지 로드 완료 후 시작화면 출력
-      let loadedImages = 0;
-      function checkAllImagesLoaded() {
-        loadedImages++;
-        if (loadedImages === 2) {
-          drawStartScreen();
-        }
-      }
-
-      titleImage.onload = checkAllImagesLoaded;
-      startBtnImage.onload = checkAllImagesLoaded;
-
-      function drawStartScreen() {
-        ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-        ctx.drawImage(startBtnImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
-      }
-
-      function animate() {
-        requestAnimationFrame(animate);
-        ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-
-        // 점프 처리
-        if (jump && runnerY > MAX_JUMP_HEIGHT) {
-          runnerY -= JUMP_SPEED;
-        } else if (!jump && runnerY < RUNNER_START_Y) {
-          runnerY += JUMP_SPEED;
-        }
-
-        const runnerImage = jump || runnerY < RUNNER_START_Y ? runnerFly : runnerSit;
-        ctx.drawImage(runnerImage, RUNNER_START_X, runnerY, RUNNER_WIDTH, RUNNER_HEIGHT);
-      }
-
-      // 클릭 시 게임 시작 처리
-      canvas.addEventListener('click', e => {
-        if (!gameStarted) {
-          const rect = canvas.getBoundingClientRect();
-          const x = e.clientX - rect.left;
-          const y = e.clientY - rect.top;
-          const btnX = (CANVAS_WIDTH - 200) / 2;
-          const btnY = (CANVAS_HEIGHT + 100) / 2;
-
-          if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
-            gameStarted = true;
-            animate();
-          }
-        }
-      });
-
-      document.addEventListener('keydown', e => {
-        if (e.code === 'Space') jump = true;
-      });
-
-      document.addEventListener('keyup', e => {
-        if (e.code === 'Space') jump = false;
-      });
-    };
-  </script>
+  };
+};
+</script>
 </body>
 </html>
