--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>밥먹자! 안지민</title>
   <style>
     body {
@@ -40,14 +40,19 @@
 <script>
 const CANVAS_WIDTH = 800, CANVAS_HEIGHT = 500;
 const RUNNER_WIDTH = 100, RUNNER_HEIGHT = 100;
-const VILLAIN_WIDTH = 150 * 2, VILLAIN_HEIGHT = 200 * 1.5;
 const RUNNER_START_X = 10, RUNNER_START_Y = 400;
 const JUMP_SPEED = 6, MAX_JUMP_HEIGHT = 20;
 const BASE_OBSTACLE_SPEED = 4, BASE_OBSTACLE_FREQUENCY = 90;
 const SCORE_PER_OBSTACLE = 10;
+const VILLAIN_WIDTH = 300, VILLAIN_HEIGHT = 300;
 
 const ASSETS = {
-  background: [
+  title: './background/title.png',
+  startBtn: './background/gamestart.png',
+  runnerSit: './character/jimin-sit.png',
+  runnerFly: './character/jimin-fly.png',
+  runnerCrash: './character/jimin-crash.png',
+  backgrounds: [
     './background/samin-background.png',
     './background/sohyun-background.png',
     './background/doyun-background.png',
@@ -62,21 +67,7 @@ const ASSETS = {
     './character/yeonki-basic.png',
     './character/sangwoo-basic.png',
     './character/boss-basic.png'
-  ],
-  obstacles: [
-    './character/samin-obstacle.png',
-    './character/sohyun-obstacle.png',
-    './character/doyun-obstacle.png',
-    './character/yeonki-obstacle.png',
-    './character/sangwoo-obstacle.png'
-  ],
-  title: './background/title.png',
-  startBtn: './background/gamestart.png',
-  gameOver: './background/gameover.png',
-  restart: './background/restart.png',
-  runnerSit: './character/jimin-sit.png',
-  runnerFly: './character/jimin-fly.png',
-  runnerCrash: './character/jimin-crash.png'
+  ]
 };
 
 window.onload = () => {
@@ -85,40 +76,62 @@ window.onload = () => {
   canvas.width = CANVAS_WIDTH;
   canvas.height = CANVAS_HEIGHT;
 
-  let gameStarted = false, gameOver = false, jump = false;
-  let score = 0, timer = 0;
+  let gameStarted = false;
+  let gameOver = false;
+  let score = 0;
+  let timer = 0;
+  let jump = false;
   let runnerY = RUNNER_START_Y;
-  let bgIndex = 0, villainY = CANVAS_HEIGHT, villainTargetY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
+
+  let bgIndex = 0;
+  let villainY = CANVAS_HEIGHT;
+  let targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
   let villainReady = false;
-  let obstacleSpeed = BASE_OBSTACLE_SPEED, obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
+  let obstacleSpeed = BASE_OBSTACLE_SPEED;
+  let obstacleFrequency = BASE_OBSTACLE_FREQUENCY;
 
   const scoreText = document.getElementById('score');
 
-  // 이미지 준비
-  const titleImage = new Image(); titleImage.src = ASSETS.title;
-  const startBtnImage = new Image(); startBtnImage.src = ASSETS.startBtn;
-  const gameOverImage = new Image(); gameOverImage.src = ASSETS.gameOver;
-  const restartImage = new Image(); restartImage.src = ASSETS.restart;
-  const runnerSit = new Image(); runnerSit.src = ASSETS.runnerSit;
-  const runnerFly = new Image(); runnerFly.src = ASSETS.runnerFly;
-  const runnerCrash = new Image(); runnerCrash.src = ASSETS.runnerCrash;
+  const titleImage = new Image();
+  const startBtnImage = new Image();
+  const runnerSit = new Image();
+  const runnerFly = new Image();
+  const runnerCrash = new Image();
+  const bgImages = ASSETS.backgrounds.map(src => { const i = new Image(); i.src = src; return i; });
+  const villainImages = ASSETS.villains.map(src => { const i = new Image(); i.src = src; return i; });
 
-  const bgImages = ASSETS.background.map(src => { const img = new Image(); img.src = src; return img; });
-  const villainImages = ASSETS.villains.map(src => { const img = new Image(); img.src = src; return img; });
-  const obstacleImages = ASSETS.obstacles.map(src => { const img = new Image(); img.src = src; return img; });
+  titleImage.src = ASSETS.title;
+  startBtnImage.src = ASSETS.startBtn;
+  runnerSit.src = ASSETS.runnerSit;
+  runnerFly.src = ASSETS.runnerFly;
+  runnerCrash.src = ASSETS.runnerCrash;
+
+  let loaded = 0;
+  const totalToLoad = 2;
+
+  function checkLoaded() {
+    loaded++;
+    if (loaded === totalToLoad) drawStartScreen();
+  }
+  titleImage.onload = checkLoaded;
+  startBtnImage.onload = checkLoaded;
+
+  function drawStartScreen() {
+    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
+    ctx.drawImage(startBtnImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
+  }
 
   class Obstacle {
-    constructor(image) {
+    constructor() {
       this.x = CANVAS_WIDTH;
       this.y = Math.random() * (CANVAS_HEIGHT - 80) + 30;
       this.width = 50;
       this.height = 50;
-      this.image = image;
-      this.frame = 0;
     }
-    draw(wave = false) {
-      if (wave) this.y += Math.sin(this.frame++ / 5) * 2;
-      ctx.drawImage(this.image, this.x, this.y, this.width, this.height);
+    draw() {
+      ctx.fillStyle = 'gray';
+      ctx.fillRect(this.x, this.y, this.width, this.height);
     }
   }
 
@@ -138,34 +151,30 @@ window.onload = () => {
 
   function animate() {
     if (gameOver) return;
+
     requestAnimationFrame(animate);
     ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-
     drawBackground();
 
-    if (!villainReady && villainY > villainTargetY) {
+    // 악당 등장
+    if (!villainReady && villainY > targetVillainY) {
       villainY -= 5;
-    } else if (!villainReady && villainY <= villainTargetY) {
-      villainY = villainTargetY;
+    } else if (!villainReady) {
+      villainY = targetVillainY;
       villainReady = true;
     }
+
     drawVillain();
 
+    // 장애물 생성
     if (villainReady && timer % obstacleFrequency === 0) {
-      if (bgIndex < 5) {
-        obstacles.push(new Obstacle(obstacleImages[bgIndex]));
-      } else {
-        for (let i = 0; i < 2; i++) {
-          const img = obstacleImages[Math.floor(Math.random() * obstacleImages.length)];
-          obstacles.push(new Obstacle(img));
-        }
-      }
+      obstacles.push(new Obstacle());
     }
 
     obstacles.forEach((obs, idx) => {
       obs.x -= obstacleSpeed;
-      obs.draw(bgIndex === 5);
-      if (isCollision({x: RUNNER_START_X, y: runnerY, width: RUNNER_WIDTH, height: RUNNER_HEIGHT}, obs)) {
+      obs.draw();
+      if (isCollision({x:RUNNER_START_X,y:runnerY,width:RUNNER_WIDTH,height:RUNNER_HEIGHT}, obs)) {
         gameOver = true;
       }
       if (obs.x < -obs.width) {
@@ -173,74 +182,60 @@ window.onload = () => {
         score += SCORE_PER_OBSTACLE;
         scoreText.textContent = '현재점수: ' + score;
 
-        if (score % 200 === 0) {
+        if (score % 200 === 0 && !gameOver) {
+          // 악당 퇴장
           villainReady = false;
-          let exit = setInterval(() => {
+          let exitInterval = setInterval(() => {
             villainY += 5;
-            if (villainY > CANVAS_HEIGHT) {
-              clearInterval(exit);
-              bgIndex = Math.min(5, Math.floor(score / 200));
+            if (villainY >= CANVAS_HEIGHT) {
+              clearInterval(exitInterval);
+              // 스테이지 전환
+              bgIndex = Math.min(bgImages.length - 1, Math.floor(score / 200));
+              villainY = CANVAS_HEIGHT;
+              targetVillainY = CANVAS_HEIGHT - VILLAIN_HEIGHT;
               obstacleSpeed += 1;
               obstacleFrequency = Math.max(20, obstacleFrequency - 10);
-              villainY = CANVAS_HEIGHT;
             }
           }, 30);
         }
       }
     });
 
-    if (jump && runnerY > MAX_JUMP_HEIGHT) runnerY -= JUMP_SPEED;
-    else if (!jump && runnerY < RUNNER_START_Y) runnerY += JUMP_SPEED;
-
-    const runnerImage = (jump || runnerY < RUNNER_START_Y) ? runnerFly : runnerSit;
+    const runnerImage = jump || runnerY < RUNNER_START_Y ? runnerFly : runnerSit;
     ctx.drawImage(runnerImage, RUNNER_START_X, runnerY, RUNNER_WIDTH, RUNNER_HEIGHT);
+
+    // 점프 처리
+    if (jump && runnerY > MAX_JUMP_HEIGHT) {
+      runnerY -= JUMP_SPEED;
+    } else if (!jump && runnerY < RUNNER_START_Y) {
+      runnerY += JUMP_SPEED;
+    }
 
     timer++;
   }
 
-  function drawStartScreen() {
-    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(titleImage, 0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(startBtnImage, (CANVAS_WIDTH - 200) / 2, (CANVAS_HEIGHT + 100) / 2, 200, 100);
-  }
-
-  function drawGameOverScreen() {
-    ctx.clearRect(0, 0, CANVAS_WIDTH, CANVAS_HEIGHT);
-    ctx.drawImage(gameOverImage, (CANVAS_WIDTH - 300) / 2, (CANVAS_HEIGHT - 200) / 2, 300, 100);
-    ctx.drawImage(restartImage, (CANVAS_WIDTH - 100) / 2, (CANVAS_HEIGHT + 50) / 2, 100, 50);
-  }
-
+  // 클릭 처리
   canvas.addEventListener('click', e => {
-    const rect = canvas.getBoundingClientRect();
-    const x = e.clientX - rect.left, y = e.clientY - rect.top;
-
     if (!gameStarted) {
-      if (x >= (CANVAS_WIDTH - 200) / 2 && x <= (CANVAS_WIDTH + 200) / 2 &&
-          y >= (CANVAS_HEIGHT + 100) / 2 && y <= (CANVAS_HEIGHT + 200) / 2) {
+      const rect = canvas.getBoundingClientRect();
+      const x = e.clientX - rect.left;
+      const y = e.clientY - rect.top;
+      const btnX = (CANVAS_WIDTH - 200) / 2;
+      const btnY = (CANVAS_HEIGHT + 100) / 2;
+      if (x >= btnX && x <= btnX + 200 && y >= btnY && y <= btnY + 100) {
         gameStarted = true;
         animate();
-      }
-    } else if (gameOver) {
-      if (x >= (CANVAS_WIDTH - 100) / 2 && x <= (CANVAS_WIDTH + 100) / 2 &&
-          y >= (CANVAS_HEIGHT + 50) / 2 && y <= (CANVAS_HEIGHT + 100) / 2) {
-        location.reload();
       }
     }
   });
 
+  // 키 입력
   document.addEventListener('keydown', e => {
     if (e.code === 'Space') jump = true;
   });
   document.addEventListener('keyup', e => {
     if (e.code === 'Space') jump = false;
   });
-
-  // 시작화면 로딩 완료 시 표시
-  titleImage.onload = () => {
-    startBtnImage.onload = () => {
-      drawStartScreen();
-    };
-  };
 };
 </script>
 </body>
